# ai-wordcloud

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  start_server.py
.claude/commands/: issue.md  lulzy.md  pr.md  work.md
.github/workflows/: ci.yml  claude-code-review.yml
backend/: main.py
frontend/: README.md
frontend/src/: App.css  App.jsx  index.css
tests/: __init__.py  test_api.py
